# oke-kueue

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  cluster-queue.yaml  custom-metrics-output.txt  fastapi-hpa.yaml  k8s-backend.template  kueue-hpa.yaml  local-queue.yaml  metrics-viewer-rbac.yaml  pyproject.toml  requirements.txt  sample-app.monitor.yaml  sample-job.yaml  sleep-app-deploy.yaml  submit-job-loadtest.sh  values.yaml
